--- a/.env.example
+++ b/.env.example
@@ -7,18 +7,18 @@ CACHE_VIEWS=false
 APP_KEY=EuVQJQaGizMiZu8NwCQR1xzBUHCu8yLV
 DB_CONNECTION=mongodb
 DB_HOST=127.0.0.1
-DB_PORT=17022
-DB_USER=dg_admin_dpsystem
-DB_PASSWORD=DP08doday
-DB_DATABASE=dp_system
+DB_PORT=
+DB_USER=d
+DB_PASSWORD=
+DB_DATABASE=
 HASH_DRIVER=bcrypt
-SMTP_PORT=587
-SMTP_HOST=smtp.gmail.com
-MAIL_USERNAME=drperformancesystem@gmail.com
-MAIL_PASSWORD=Dr.Performance10
-MAIL_CONNECTION=smtp
+SMTP_PORT=
+SMTP_HOST=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_CONNECTION=
 
-S3_KEY=AKIAZH5DJ2BL72IYX2UI
-S3_SECRET=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
-S3_BUCKET=veicle-storage
-S3_REGION=us-east-1
+S3_KEY=
+S3_SECRET=
+S3_BUCKET=
+S3_REGION=
