--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "NODE_ENV=development nodemon --inspect server.js",
     "test": "node ace test"
   },
   "keywords": [
@@ -42,6 +43,7 @@
     "eslint": "^8.1.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "nodemon": "^2.0.16",
     "prettier": "^2.4.1"
   },
   "autoload": {
