--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -1,8 +1,6 @@
-# Use root/example as user/password credentials
-version: '3.1'
+version: '3.3'
 
 services:
-
   mongo:
     image: mongo
     restart: always
@@ -11,6 +9,8 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin
+    volumes:
+      - './data:/data/db'
   mongo-express:
     image: mongo-express
     restart: always
