--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-cron": "^3.0.0"
   },
   "devDependencies": {
+    "adonisjs-types": "^1.3.4",
     "eslint": "^8.1.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
