--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "NODE_ENV=development nodemon --inspect server.js",
+    "dev:ts": "NODE_ENV=development nodemon --exec ts-node --transpile-only server.js",
     "test": "node ace test"
   },
   "keywords": [
@@ -40,6 +41,7 @@
     "node-cron": "^3.0.0"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "adonisjs-types": "^1.3.4",
     "eslint": "^8.1.0",
     "eslint-config-airbnb-base": "^14.2.1",
