--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lucid-mongo": "^3.1.6",
     "moment": "^2.29.1",
     "mongoose": "^5.12.1",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
