--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Adonisjs boilerplate for API server with pre-configured JWT",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node fork.js",
     "dev": "NODE_ENV=development nodemon --inspect server.js",
     "deploy": "node server.js",
     "test": "node ace test"
