--- a/package.json
+++ b/package.json
@@ -59,7 +59,11 @@
     "youch-terminal": "^2.1.5",
     "husky": "^8.0.3",
     "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0"
+    "cz-conventional-changelog": "^3.3.0",
+    "@vitest/coverage-istanbul": "^0.28.5",
+    "@vitest/ui": "^0.28.5",
+    "vitest": "^0.27.3",
+    "cli-color": "^2.0.3"
   },
   "dependencies": {
     "@adonisjs/auth": "^8.2.3",
