--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "commit": "git-cz",
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
-    "test": "NODE_ENV=test node ace test",
+    "test:e2e": "NODE_ENV=test node ace test",
+    "test": "cross-env NODE_ENV=test vitest --ui --watch --t Unitary",
+    "test:integration": "cross-env NODE_ENV=test vitest --ui --watch --t Integration",
+    "coverage": "vitest run --coverage",
     "start": "node server.js",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write ."
@@ -40,30 +43,31 @@
     "printWidth": 100
   },
   "devDependencies": {
+    "@adonisjs/assembler": "^5.9.5",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
-    "@adonisjs/assembler": "^5.9.5",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.2.2",
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
+    "@vitest/coverage-istanbul": "^0.28.5",
+    "@vitest/ui": "^0.28.5",
     "adonis-preset-ts": "^2.1.0",
+    "cli-color": "^2.0.3",
+    "commitizen": "^4.3.0",
+    "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-adonis": "^2.1.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "pino-pretty": "^9.1.1",
     "prettier": "^2.8.3",
     "typescript": "~4.6",
-    "youch": "^3.2.2",
-    "youch-terminal": "^2.1.5",
-    "husky": "^8.0.3",
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "@vitest/coverage-istanbul": "^0.28.5",
-    "@vitest/ui": "^0.28.5",
     "vitest": "^0.27.3",
-    "cli-color": "^2.0.3"
+    "youch": "^3.2.2",
+    "youch-terminal": "^2.1.5"
   },
   "dependencies": {
     "@adonisjs/auth": "^8.2.3",
