--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,10 @@
       ],
       "Database/*": [
         "./database/*"
-      ]
+      ],
+      "Types/*": [
+        "./@types/*"
+      ],
     },
     "types": [
       "@adonisjs/core",
