--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "commit": "git-cz",
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
-    "test:e2e": "NODE_ENV=test node ace test",
+    "test:e2e": "node ace test --files 'test/e2e/*.spec.ts'",
     "test": "cross-env NODE_ENV=test vitest --ui --watch --t Unitary",
     "test:integration": "cross-env NODE_ENV=test vitest --ui --watch --t Integration",
     "coverage": "vitest run --coverage",
@@ -72,8 +72,12 @@
   "dependencies": {
     "@adonisjs/auth": "^8.2.3",
     "@adonisjs/core": "^5.8.0",
+    "@adonisjs/lucid": "^18.3.0",
     "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/validator": "^12.4.2",
+    "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.29.3",
+    "lucid-mongo": "^3.1.6",
     "mongoose": "^6.9.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
