--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "outDir": "build",
     "rootDir": "./",
     "sourceMap": true,
+    "experimentalDecorators": true,
     "paths": {
       "App/*": [
         "./app/*"
