--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "commit": "git-cz",
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
-    "test:e2e": "node ace test --files 'test/e2e/*.spec.ts'",
+    "test:e2e": "node ace test",
     "test": "cross-env NODE_ENV=test vitest --ui --watch --t Unitary",
     "test:integration": "cross-env NODE_ENV=test vitest --ui --watch --t Integration",
     "coverage": "vitest run --coverage",
@@ -47,7 +47,7 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@japa/preset-adonis": "^1.2.0",
-    "@japa/runner": "^2.2.2",
+    "@japa/runner": "^2.5.1",
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
     "@vitest/coverage-istanbul": "^0.28.5",
