feat(sessioncontroller): sistema de login funcioanl e estabilizado

--- a/.env.example
+++ b/.env.example
@@ -25,4 +25,8 @@ S3_REGION=
 ADMIN_API_KEY=
 
 SITE_URL="https://dpsystem.netlify.app"
-
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
+SESSION_DRIVER=cookie
