--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -21,7 +21,9 @@
     "./providers/AppProvider",
     "./providers/MongooseProvider.ts",
     "@adonisjs/core",
-    "@adonisjs/auth"
+    "@adonisjs/auth",
+    "@adonisjs/redis",
+    "@adonisjs/session"
   ],
   "aceProviders": [
     "@adonisjs/repl"
