--- a/package.json
+++ b/package.json
@@ -15,44 +15,22 @@
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write ."
   },
-  "eslintConfig": {
-    "extends": [
-      "plugin:adonis/typescriptApp",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": [
-        "error"
-      ]
-    }
-  },
   "eslintIgnore": [
     "build"
   ],
-  "prettier": {
-    "trailingComma": "es5",
-    "semi": false,
-    "singleQuote": true,
-    "useTabs": false,
-    "quoteProps": "consistent",
-    "bracketSpacing": true,
-    "arrowParens": "always",
-    "printWidth": 100
-  },
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.5",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.5.1",
+    "@types/cli-color": "^2.0.2",
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
     "@vitest/coverage-istanbul": "^0.28.5",
     "@vitest/ui": "^0.28.5",
     "adonis-preset-ts": "^2.1.0",
+    "cli": "^1.0.1",
     "cli-color": "^2.0.3",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
