--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "sourceMap": true,
     "experimentalDecorators": true,
     "paths": {
+      "@/*": [
+        "app/Core/*"
+      ],
       "App/*": [
         "./app/*"
       ],
