chore(mail): instalado sistema de email

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,6 @@ DB_PORT=27017
 DB_CONNECTION_STRING="mongodb://admin:admin@localhost/admin?connectTimeoutMS=300000&retryWrites=true"
 
 HASH_DRIVER="bcrypt"
-SMTP_PORT=2525
-SMTP_HOST="smtp.umbler.com"
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_CONNECTION="smtp"
@@ -30,3 +28,5 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=
 SESSION_DRIVER=cookie
+SMTP_USERNAME=<username>
+SMTP_PASSWORD=<password>
