--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/cors": "^1.0.7",
     "@adonisjs/lucid": "^18.3.0",
+    "@adonisjs/mail": "^8.1.2",
     "@adonisjs/redis": "^7.3.2",
     "@adonisjs/repl": "^3.1.0",
     "@adonisjs/session": "^6.4.0",
