fix(helpers): correções de importação dos models

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
                 "printWidth": 80,
                 "tabWidth": 4
             }
-        ]
+        ],
+        "@typescript-eslint/naming-convention": "off",
+        "@typescript-eslint/explicit-member-accessibility": "off"
     }
 }
