--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "husky": "^8.0.3",
     "pino-pretty": "^9.1.1",
     "prettier": "^2.8.3",
-    "typescript": "~4.6",
+    "typescript": "^5.0.4",
     "vitest": "^0.27.3",
     "youch": "^3.2.2",
     "youch-terminal": "^2.1.5"
