--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,56 @@
 {
-    "extends": [
-        "eslint:recommended",
-        "plugin:adonis/typescriptApp",
-        "prettier"
-    ],
-    "plugins": [
-        "prettier"
-    ],
-    "rules": {
-        "prettier/prettier": [
-            "error",
-            {
-                "semi": true,
-                "useTabs": true,
-                "quoteProps": "consistent",
-                "bracketSpacing": true,
-                "arrowParens": "always",
-                "singleQuote": true,
-                "trailingComma": "all",
-                "printWidth": 80,
-                "tabWidth": 4
-            }
-        ],
-        "@typescript-eslint/naming-convention": "off",
-        "@typescript-eslint/explicit-member-accessibility": "off"
-    }
+	"env": {
+		"es2021": true,
+		"node": true
+	},
+	"extends": [
+		"eslint:recommended",
+		"plugin:@typescript-eslint/recommended",
+		"plugin:prettier/recommended"
+	],
+	"overrides": [],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"plugins": [
+		"@typescript-eslint",
+		"prettier"
+	],
+	"rules": {
+		"indent": [
+			"error",
+			"tab"
+		],
+		"no-mixed-spaces-and-tabs": "off",
+		"linebreak-style": [
+			"error",
+			"unix"
+		],
+		"quotes": [
+			"error",
+			"single"
+		],
+		"semi": [
+			"error",
+			"never"
+		],
+		"object-curly-spacing": "off",
+		"prettier/prettier": [
+			"error",
+			{
+				"semi": false,
+				"useTabs": true,
+				"bracketSpacing": true,
+				"arrowParens": "always",
+				"singleQuote": true,
+				"trailingComma": "all",
+				"printWidth": 90,
+				"tabWidth": 4
+			}
+		],
+		"@typescript-eslint/naming-convention": "off",
+		"@typescript-eslint/explicit-member-accessibility": "off"
+	}
 }
