feat(swagger): configurado documentação swagger

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
       "@adonisjs/auth",
       "@adonisjs/redis",
       "@adonisjs/session",
-      "@adonisjs/mail"
+      "@adonisjs/mail",
+      "adonis5-swagger"
     ]
   }
 }
