--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -4,7 +4,8 @@
     "./commands",
     "@adonisjs/core/build/commands/index.js",
     "@adonisjs/repl/build/commands",
-    "@adonisjs/mail/build/commands"
+    "@adonisjs/mail/build/commands",
+    "adonis5-swagger/build/commands"
   ],
   "exceptionHandlerNamespace": "App/Exceptions/Handler",
   "aliases": {
@@ -25,7 +26,8 @@
     "@adonisjs/auth",
     "@adonisjs/redis",
     "@adonisjs/session",
-    "@adonisjs/mail"
+    "@adonisjs/mail",
+    "adonis5-swagger"
   ],
   "aceProviders": [
     "@adonisjs/repl"
