--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@adonisjs/repl": "^3.1.0",
 		"@adonisjs/session": "^6.4.0",
 		"@adonisjs/validator": "^12.4.2",
+		"adonis5-swagger": "^1.4.1",
 		"cpf-cnpj-validator": "^1.0.3",
 		"date-fns": "^2.29.3",
 		"lucid-mongo": "^3.1.6",
