--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"prepare": "husky install",
 		"commit": "git-cz",
 		"dev": "node ace serve --watch",
-		"build": "node ace build --production",
+		"build": "node ace build --production --ignore-ts-errors",
+		"postbuild": "cp .env build/.env && cd build && yarn install --production",
 		"test:e2e": "node ace test --watch",
 		"test": "cross-env NODE_ENV=test vitest --ui --watch --t Unit",
 		"test:integration": "cross-env NODE_ENV=test vitest --ui --watch --t Integration",
