chore(env): colocado mais atributos no contrato env

--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,6 @@ DB_PORT=27017
 DB_CONNECTION_STRING="mongodb://admin:admin@localhost/admin?connectTimeoutMS=300000&retryWrites=true"
 
 HASH_DRIVER="bcrypt"
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_CONNECTION="smtp"
 
 S3_KEY=
 S3_SECRET=
@@ -28,5 +25,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=
 SESSION_DRIVER=cookie
+SMTP_HOST=localhost
+SMTP_PORT=587
 SMTP_USERNAME=<username>
 SMTP_PASSWORD=<password>
