--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"prepare": "husky install",
 		"commit": "git-cz",
+		"prod": "NODE_ENV=production node ace serve --watch",
 		"dev": "node ace serve --watch",
 		"build": "node ace build --production --ignore-ts-errors",
 		"postbuild": "cp .env build/.env && cd build && yarn install --production",
@@ -61,6 +62,7 @@
 		"@adonisjs/repl": "^3.1.0",
 		"@adonisjs/session": "^6.4.0",
 		"@adonisjs/validator": "^12.4.2",
+		"@adonisjs/view": "^6.2.0",
 		"adonis5-swagger": "^1.4.1",
 		"axios": "^1.4.0",
 		"cpf-cnpj-validator": "^1.0.3",
