--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -1,5 +1,6 @@
 version: '3.3'
 
+name: dpsystem-db
 services:
   mongo:
     image: mongo
@@ -30,14 +31,16 @@ services:
     ports:
       - 8082:8082
     environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${DB_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${DB_PASSWORD}
       ME_CONFIG_MONGODB_URL: ${DB_CONNECTION_STRING}
     depends_on:
       - mongo
 
   redis:
     image: redis
-    restart: always
     command: redis-server
+    restart: always
     ports:
       - "6379:6379"
 
@@ -49,6 +52,7 @@ services:
       - POSTFIX_myhostname=${SMTP_USERNAME}
       - POSTFIX_mydomain=${SMTP_DOMAIN}
       - POSTFIX_mynetworks=127.0.0.0/8, 172.17.0.0/16
+      - ALLOWED_SENDER_DOMAINS=${SMTP_DOMAIN}
     volumes:
       - ./postfix/postfix:/var/spool/postfix
       - ./postfix/mail:/var/mail
