--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"prepare": "husky install",
 		"commit": "git-cz",
-		"prod": "NODE_ENV=production node ace serve --watch",
+		"prod": "NODE_ENV=production node ace serve",
 		"dev": "node ace serve --watch",
 		"build": "node ace build --production --ignore-ts-errors",
 		"postbuild": "cp .env build/.env && cd build && yarn install --production",
