--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=3333
 HOST=0.0.0.0
+ADONNIS_LEGADO_URL=http://localhost:3333
 NODE_ENV=development
 APP_NAME="DPSystem"
 APP_KEY=0p6GLtJKMd2dGRtGf-OZiAwKxHyS57hO
