--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"copy": "cp .env build/.env && cp ecosystem.config.js build/ecosystem.config.js && cp -r certs build/certs",
 		"postbuild": "yarn copy && cd build && yarn install --production",
 		"test:e2e": "node ace test --watch",
-		"test": "cross-env NODE_ENV=test vitest --ui --watch --t Unit",
+		"test:unit": "cross-env NODE_ENV=test vitest --ui --watch --t Unit",
 		"test:integration": "cross-env NODE_ENV=test vitest --ui --watch --t Integration",
+		"test": "cross-env NODE_ENV=test vitest && node ace test",
 		"coverage": "vitest run --coverage",
 		"start": "node server.js",
 		"lint": "eslint . --ext=.ts",
@@ -23,16 +24,16 @@
 	],
 	"devDependencies": {
 		"@adonisjs/assembler": "^5.9.5",
-		"@commitlint/cli": "^17.4.4",
-		"@commitlint/config-conventional": "^17.4.4",
-		"@faker-js/faker": "^7.6.0",
+		"@commitlint/cli": "^17.7.0",
+		"@commitlint/config-conventional": "^17.7.0",
+		"@faker-js/faker": "^8.0.2",
 		"@japa/preset-adonis": "^1.2.0",
 		"@japa/runner": "^2.5.1",
 		"@types/cli-color": "^2.0.2",
 		"@types/proxy-addr": "^2.0.0",
 		"@types/source-map-support": "^0.5.6",
-		"@typescript-eslint/eslint-plugin": "^5.59.0",
-		"@typescript-eslint/parser": "^5.59.0",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.62.0",
 		"@vitest/coverage-istanbul": "^0.28.5",
 		"@vitest/ui": "^0.28.5",
 		"adonis-preset-ts": "^2.1.0",
@@ -42,25 +43,25 @@
 		"commitizen": "^4.3.0",
 		"cross-env": "^7.0.3",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^8.33.0",
+		"eslint": "^8.46.0",
 		"eslint-config-prettier": "^7.2.0",
 		"eslint-plugin-adonis": "^2.1.1",
 		"eslint-plugin-prettier": "^4.2.1",
 		"husky": "^8.0.3",
-		"pino-pretty": "^9.1.1",
+		"pino-pretty": "^9.4.1",
 		"prettier": "^2.8.8",
-		"typescript": "^5.0.4",
+		"typescript": "^5.1.6",
 		"vitest": "^0.27.3",
-		"youch": "^3.2.2",
-		"youch-terminal": "^2.1.5"
+		"youch": "^3.2.3",
+		"youch-terminal": "^2.2.2"
 	},
 	"dependencies": {
 		"@adonisjs/auth": "^8.2.3",
-		"@adonisjs/core": "^5.8.0",
+		"@adonisjs/core": "^5.9.0",
 		"@adonisjs/cors": "^1.0.7",
-		"@adonisjs/lucid": "^18.3.0",
-		"@adonisjs/mail": "^8.1.2",
-		"@adonisjs/redis": "^7.3.2",
+		"@adonisjs/lucid": "^18.4.0",
+		"@adonisjs/mail": "^8.2.0",
+		"@adonisjs/redis": "^7.3.3",
 		"@adonisjs/repl": "^3.1.0",
 		"@adonisjs/session": "^6.4.0",
 		"@adonisjs/validator": "^12.4.2",
@@ -68,15 +69,15 @@
 		"adonis5-swagger": "^1.4.1",
 		"axios": "^1.4.0",
 		"cpf-cnpj-validator": "^1.0.3",
-		"date-fns": "^2.29.3",
+		"date-fns": "^2.30.0",
 		"lucid-mongo": "^3.1.6",
-		"mongoose": "^6.9.1",
+		"mongoose": "^6.11.5",
 		"ncrypt-js": "^2.0.0",
 		"phc-bcrypt": "^1.0.8",
 		"proxy-addr": "^2.0.7",
 		"reflect-metadata": "^0.1.13",
 		"source-map-support": "^0.5.21",
-		"winston": "^3.8.2",
+		"winston": "^3.10.0",
 		"zod": "^3.21.4"
 	},
 	"config": {
