--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
 	"name": "dpsystem-api",
 	"version": "2.0.0",
 	"private": true,
+	"engines": {
+		"node": ">= 18",
+		"npm": ">= 9",
+		"yarn": ">= 1.22"
+	},
 	"scripts": {
 		"prepare": "husky install",
 		"commit": "git-cz",
