refactor: corrigido e melhorado rotas de partners

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"prod": "NODE_ENV=production node ace serve",
 		"dev": "node ace serve --watch",
 		"build": "node ace build --production --ignore-ts-errors",
-		"copy": "cp .env build/.env && cp ecosystem.config.js build/ecosystem.config.js && cp -r certs build/certs",
-		"postbuild": "yarn copy && cd build && yarn install --production",
+		"copy": "cp .env build/.env && cp ecosystem.config.js build/ecosystem.config.js",
+		"postbuild": "yarn copy && cd build && yarn install --production && cp -r certs build/certs",
 		"test:e2e": "node ace test --watch",
 		"test:unit": "cross-env NODE_ENV=test vitest --ui --watch --t Unit",
 		"test:integration": "cross-env NODE_ENV=test vitest --ui --watch --t Integration",
