fix: remoção de rotas legado e correção no endpoint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,10 +19,7 @@
 		"prettier"
 	],
 	"rules": {
-		"indent": [
-			"error",
-			"tab"
-		],
+		"indent": "off",
 		"no-mixed-spaces-and-tabs": "off",
 		"linebreak-style": [
 			"error",
