--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,8 @@
 			"@adonisjs/session",
 			"@adonisjs/mail",
 			"adonis5-swagger",
-			"@adonisjs/view"
+			"@adonisjs/view",
+			"@adonisjs/shield"
 		]
 	}
 }
