--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"@adonisjs/redis": "^7.3.3",
 		"@adonisjs/repl": "^3.1.0",
 		"@adonisjs/session": "^6.4.0",
+		"@adonisjs/shield": "^7.1.1",
 		"@adonisjs/validator": "^12.4.2",
 		"@adonisjs/view": "^6.2.0",
 		"adonis5-swagger": "^1.4.1",
