--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,12 @@ SMTP_PORT=587
 SMTP_USERNAME=<username>
 SMTP_PASSWORD=<password>
 CACHE_VIEWS=false
+
+
+## Para testes de Integração
+TEST_INTEGRATION_UNITY_ID=""
+TEST_INTEGRATION_USER_ID=""
+TEST_INTEGRATION_HEALTH_INSURANCE_ID=""
+TEST_INTEGRATION_PROCEDURE_ID=""
+TEST_INTEGRATION_CLIENT_ID=""
+
