--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"dev": "node ace serve --watch",
 		"build": "node ace build --production --ignore-ts-errors",
 		"copy": "cp .env build/.env && cp ecosystem.config.js build/ecosystem.config.js",
-		"postbuild": "yarn copy && cd build && yarn install --production && cp -r certs build/certs",
+		"postbuild": "yarn copy && yarn swagger && cd build && yarn install --production  && cp -r certs build/certs ",
+		"swagger": "node ace swagger:generate && cp -a docs/ build/docs",
 		"test:e2e": "node ace test --watch",
 		"test:unit": "cross-env NODE_ENV=test vitest --ui --watch --t Unit",
 		"test:integration": "cross-env NODE_ENV=test vitest --ui --watch --t Integration",
