feat: novos hoooks para uso em react query

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,8 @@
 			"@adonisjs/mail",
 			"adonis5-swagger",
 			"@adonisjs/view",
-			"@adonisjs/shield"
+			"@adonisjs/shield",
+			"@adonisjs/bouncer"
 		]
 	}
 }
