--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -5,7 +5,8 @@
 		"@adonisjs/core/build/commands/index.js",
 		"@adonisjs/repl/build/commands",
 		"@adonisjs/mail/build/commands",
-		"adonis5-swagger/build/commands"
+		"adonis5-swagger/build/commands",
+		"@adonisjs/bouncer/build/commands"
 	],
 	"exceptionHandlerNamespace": "App/Exceptions/Handler",
 	"aliases": {
@@ -17,7 +18,8 @@
 	"preloads": [
 		"./start/routes",
 		"./start/kernel",
-		"./start/validator"
+		"./start/validator",
+		"./start/bouncer"
 	],
 	"providers": [
 		"./providers/AppProvider",
@@ -29,7 +31,8 @@
 		"@adonisjs/mail",
 		"adonis5-swagger",
 		"@adonisjs/view",
-		"@adonisjs/shield"
+		"@adonisjs/shield",
+		"@adonisjs/bouncer"
 	],
 	"aceProviders": [
 		"@adonisjs/repl"
