--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 		"@faker-js/faker": "^8.1.0",
 		"@japa/preset-adonis": "^1.2.0",
 		"@japa/runner": "^2.5.1",
+		"@rollup/plugin-typescript": "^11.1.5",
+		"@swc/core": "^1.3.92",
 		"@types/cli-color": "^2.0.3",
 		"@types/proxy-addr": "^2.0.1",
 		"@types/source-map-support": "^0.5.8",
@@ -53,6 +55,7 @@
 		"eslint-plugin-adonis": "^2.1.1",
 		"husky": "^8.0.3",
 		"prettier": "^3.0.3",
+		"rollup-plugin-swc": "^0.2.1",
 		"typescript": "^5.2.2",
 		"vitest": "^0.34.5",
 		"youch": "^3.3.2",
@@ -73,6 +76,7 @@
 		"@adonisjs/view": "^6.2.0",
 		"adonis5-swagger": "^1.4.1",
 		"axios": "^1.5.1",
+		"class-validator": "^0.14.0",
 		"cpf-cnpj-validator": "^1.0.3",
 		"date-fns": "^2.30.0",
 		"lucid-mongo": "^3.1.6",
@@ -83,6 +87,7 @@
 		"reflect-metadata": "^0.1.13",
 		"socket.io": "^4.7.2",
 		"source-map-support": "^0.5.21",
+		"tsyringe": "^4.8.0",
 		"winston": "^3.10.0",
 		"zod": "^3.22.2"
 	},
