--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@rollup/plugin-typescript": "^11.1.5",
 		"@swc/core": "^1.3.92",
 		"@types/cli-color": "^2.0.3",
+		"@types/lodash": "^4.14.199",
 		"@types/proxy-addr": "^2.0.1",
 		"@types/source-map-support": "^0.5.8",
 		"@typescript-eslint/parser": "^6.7.3",
@@ -79,6 +80,7 @@
 		"class-validator": "^0.14.0",
 		"cpf-cnpj-validator": "^1.0.3",
 		"date-fns": "^2.30.0",
+		"lodash": "^4.17.21",
 		"lucid-mongo": "^3.1.6",
 		"mongoose": "^7.5.3",
 		"ncrypt-js": "^2.0.0",
