feat: cacheamento nas rotas, evitando acessos ao bd

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 	"compilerOptions": {
 		"outDir": "build",
 		"rootDir": "./",
-		"sourceMap": true,
+		"sourceMap": false,
 		"experimentalDecorators": true,
 		"paths": {
 			"App/*": [
