--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"test:unit": "cross-env NODE_ENV=test vitest --ui --watch --t Unit",
 		"test:integration": "cross-env NODE_ENV=test vitest --ui --watch --t Integration",
 		"test:only": "cross-env NODE_ENV=test vitest --ui --watch --t Only",
+		"test-ci": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
 		"test": "cross-env NODE_ENV=test vitest && node ace test",
 		"coverage": "vitest run --coverage",
 		"start": "node server.js",
