--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
 		"commit": "git-cz",
 		"prod": "NODE_ENV=production node ace serve",
 		"dev": "node ace serve --watch",
+		"prebuild": "yarn swagger",
 		"build": "node ace build --production --ignore-ts-errors",
-		"copy": "cp .env build/.env && cp ecosystem.config.js build/ecosystem.config.js",
-		"postbuild": "yarn copy && yarn swagger && cd build && yarn install --production  && cp -r certs build/certs ",
-		"swagger": "node ace swagger:generate && cp -a docs/ build/docs",
+		"postbuild": "cd build && yarn install --production",
+		"swagger": "node ace swagger:generate",
 		"test:e2e": "node ace test --watch",
 		"test:unit": "cross-env NODE_ENV=test vitest --ui --watch --t Unit",
 		"test:integration": "cross-env NODE_ENV=test vitest --ui  --watch --t Integration",
