--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"@adonisjs/bouncer": "^2.3.0",
 		"@adonisjs/core": "^5.9.0",
 		"@adonisjs/cors": "^1.0.7",
+		"@adonisjs/limiter": "^1.0.2",
 		"@adonisjs/lucid": "^18.4.2",
 		"@adonisjs/mail": "^8.2.1",
 		"@adonisjs/redis": "^7.3.4",
