Add new test scripts for CI

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"test:integration": "cross-env NODE_ENV=test vitest --ui  --watch --t Integration",
 		"test:only": "cross-env NODE_ENV=test vitest --ui --watch  --t Only",
 		"test-ci": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
+		"test:ci:unit": "cross-env NODE_ENV=test vitest --t Unit",
+		"test:ci:integration": "cross-env NODE_ENV=test vitest --t Integration",
+		"test:ci:e2e": "node ace test",
 		"test-only": "cross-env NODE_ENV=test vitest --t Only",
 		"test": "cross-env NODE_ENV=test vitest && node ace test",
 		"coverage": "vitest run --coverage",
